Removed permsize option